--- a/app/views/game.erb
+++ b/app/views/game.erb
@@ -1,7 +1,7 @@
-<h1>Game is about to begin</h1>
-<button id="new_game">Start new game</button>
-
-<table class="game hidden <%= current_user['id'] %>" >
+<h3 class="my_turn">Player1: <%= @game.player1.username %>
+</h3>
+<h3>Player2: <%= @game.player2.username %></h3>
+<table class="game <%= current_user['id'] %>" >
 	<tr class="row">
 		<td class="cell"></td>
 		<td class="cell"></td>
@@ -18,13 +18,3 @@
 		<td class="cell"></td>
 	</tr>
 </table>
-
-<h2>ALL GAMES:</h2>
-<% @games.each do |game| %>
-	<h3>Play with <%= game.player1.username %> </h3>
-	<form id="join_game" action="/games/<%= game.id %>" method="POST">
-		<input type="hidden" name="_method" value="PUT" />
-		<input type="submit" value="JOIN" />
-	</form>
-<% end %>
-
