--- a/public/css/application.css
+++ b/public/css/application.css
@@ -27,3 +27,15 @@ button {
 	width: 90px;
 	border: 5px solid black;
 }
+.my_turn {
+	color: red;
+}
+.huge {
+	/*position: absolute;*/
+	/*font-size: 50px;*/
+	margin-left: auto;
+	margin-right: auto;
+}
+.cell {
+	/*position: relative;*/
+}
