--- a/app/views/game.erb
+++ b/app/views/game.erb
@@ -3,6 +3,7 @@
 <h3 id=<%= @game.player2.id %> class="opponent">Player2: <%= @game.player2.username %></h3>
 <button id="letsStart">Begin</button>
 <table id ="game-<%= @game.id %>" class="game <%= current_user.id %>" >
+<h3 id="yourTurn" class="hidden">Your turn</h3>
 	<tr class="row">
 		<td id="0" class="cell"></td>
 		<td id="1" class="cell"></td>
