working on right sign

--- a/app/views/games.erb
+++ b/app/views/games.erb
@@ -14,7 +14,7 @@
 	<% end %>
 </div>
 
-<h3 class="my_turn hidden">Player1: <%= current_user.username %></h3>
+<h3 class="my_turn hidden" >Player1(me): <%= current_user.username %></h3>
 <h3 class="opponent hidden"></h3>
 <table id=<%= current_user.id %> class="game hidden <%= current_user['id'] %>" >
 	<tr class="row">
